--- a/package.json
+++ b/package.json
@@ -205,20 +205,21 @@
       },
       {
         "command": "cm.buildRelease",
-        "title": "Build Release",
+        "title": "Full Build and Release",
         "description":  "Build a new Release",
         "category": "CM"
       },
-      {
-        "command": "cm.zachTestCommand",
-        "title": "Zach Test Command",
-        "description": "Zach Test command",
-        "category": "CM"
-      }, 
+      
       {
         "command": "cm.uploadExtension",
         "title": "Upload CET Extension",
         "description": "Upload CET Extension",
+        "category": "CM"
+      }, 
+      {
+        "command": "cm.openBuildCentralGUI",
+        "title": "Open Build Central GUI",
+        "description": "Open Build Central GUI",
         "category": "CM"
       }
     ],
